--- a/src/app/shared/components/info/info.component.scss
+++ b/src/app/shared/components/info/info.component.scss
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 968px; 
+  height: 174px; 
+  position: absolute; 
+  top: -5558px; 
+  left: 2312px; 
+  gap: 0px;
+  opacity: 0;
 
   &__header {
     font-weight: 700;
