--- a/src/app/shared/components/course-card/course-card.component.html
+++ b/src/app/shared/components/course-card/course-card.component.html
@@ -1,23 +1,24 @@
 <div class="course-card">
     <div class="course-card__description">
-      <!-- Replace ::text:: with your code -->
-      <div class="course-card__description-title">::Title::</div>
-      <div class="course-card__description-text">::Description::</div>
+      <div class="course-card__description-title">{{ title }}</div>
+      <div class="course-card__description-text">{{ description }}</div>
     </div>
     <div class="course-card__info">
-        <div class="course-card__info-text">
-            <div>
-              <b>Authors: </b>
-              ::Authors::
-            </div>
-            <div><b>Duration: </b><span class="course-card__duration">::Duration::</span></div>
-            <div><b>Created: </b><span class="course-card__date">::Creation Date::</span></div>
+      <div class="course-card__info-text">
+        <div>
+          <b>Authors: </b>
+          {{ authors.join(', ') }}
         </div>
-        <div class="course-card__info-actions">
-            <app-button></app-button>
-            <div class="course-card__buttons">
-                <!--Enter your code here-->
-            </div>
+        <div><b>Duration: </b><span class="course-card__duration">{{ duration }} minutes</span></div>
+        <div><b>Created: </b><span class="course-card__date">{{ creationDate | date }}</span></div>
+      </div>
+      <div class="course-card__info-actions">
+        <app-button (click)="onShowCourse()">Show course</app-button>
+        <div class="course-card__buttons">
+          <ng-content></ng-content>
+          <button *ngIf="editable">Edit</button>
+          <button *ngIf="editable">Remove</button>
         </div>
+      </div>
     </div>
-</div>
+  </div>
