--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,8 +4,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    width: 100%; 
+    max-width: 1962px; 
+    height: 182px;
     padding: 0 30px;
     background-color: $color-white;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 1px 1px 4px 0px #00000026;
+    gap: 0px; 
+    margin: 0 auto; 
+}
+
+.logo {
+    height: 40px;
+}
+
+.content {
+    display: flex;
+    align-items: center;
 }
